Add Affinity & security grounp in vnfm.